Add posts to question
