# src/Response/QuestionResponse.php
@@ -3,18 +3,35 @@
 namespace Q2aApi\Response;
 
 use Q2aApi\Dto\QuestionDto;
+use Q2aApi\Dto\AnswerDto;
+use Q2aApi\Dto\CommentDto;
+use Q2aApi\Dto\PostDto;
 use Q2aApi\Http\JsonResponse;
 use Q2aApi\Http\ResponseBodyFunctionInterface;
 
 class QuestionResponse extends JsonResponse implements ResponseBodyFunctionInterface
 {
     private $question;
+    private $answers;
+    private $comments;
     private $favourites;
     private $full;
 
-    public function __construct(QuestionDto $question, array $favourites = [], bool $full = false)
+     /**
+     * @param AnswerDto[] $answers
+     * @param CommentDto[] $comments
+     */
+    public function __construct(
+        QuestionDto $question,
+        array $answers,
+        array $comments,
+        array $favourites = [],
+        bool $full = false
+    )
     {
         $this->question = $question;
+        $this->answers = $answers;
+        $this->comments = $comments;
         $this->favourites = $favourites;
         $this->full = $full;
 
@@ -23,75 +40,130 @@ class QuestionResponse extends JsonResponse implements ResponseBodyFunctionInter
 
     public function data(): array
     {
-        $data = [
-            'id' => $this->question->getId(),
-            'title' => $this->question->getTitle(),
-            'slug' => $this->question->getSlug(),
-            'answers' => $this->question->getAnswersCount(),
-            'votes' => $this->question->getVotesSum(),
-            'views' => $this->question->getViewsNumber(),
-            'favourite' => $this->question->isFavouriteForLoggedUser(),
-            'userVote' => $this->question->getUserVote(),
-            'closed' => $this->question->isClosed(),
-            'hasBestAnswer' => $this->question->hasBestAnswer(),
-            'createDate' => $this->question->getCreatedDate(),
-            'tags' => array_map(function ($tag) {
-                return [
-                    'name' => $tag,
-                    'favourite' => isset($this->favourites['tag'][$tag])
-                ];
-            }, $this->question->getTags()),
-            'category' => [
-                'id' => $this->question->getCategory()->getId(),
-                'title' => $this->question->getCategory()->getName(),
-                'path' => $this->question->getCategory()->getPath(),
-                'favourite' => isset($this->favourites['category'][$this->question->getOriginal('categorybackpath')])
-            ],
-            'change' => [
-                'type' => $this->getLatestChangeType(),
-                'user' => $this->question->hasOriginal('ouserid') && $this->question->getOriginal('oupdatetype') !== null
-                    ? ($this->question->getOriginal('ouserid') !== null ? $this->getUser('o') : null)
-                    : ($this->question->getOriginal('userid') !== null ? $this->getUser() : null),
-                'date' => date('c', $this->question->getOriginal('otime') ?? $this->question->getOriginal('created')),
-                'showItemId' => $this->question->hasOriginal('opostid') && $this->question->getOriginal('obasetype') !== 'Q'
-                    ? (int)$this->question->getOriginal('opostid')
-                    : null
-            ],
-        ];
         if ($this->full === false) {
-            return $data;
+            return $this->getPostKeys($this->question);
         }
-
-        return array_merge($data, [
-            'author' => [
-                'id' => $this->question->getAuthor()->getId(),
-                'name' => $this->question->getAuthor()->getName(),
-                'title' => $this->question->getAuthor()->getPointsTitle(),
-                'points' => $this->question->getAuthor()->getPoints(),
-                'level' => $this->question->getAuthor()->getLevel(),
-                'favourite' => isset($this->favourites['user'][$this->question->getAuthor()->getId()])
-            ],
-            'isHidden' => $this->question->isHidden(),
-            'contentType' => $this->question->hasHtmlContent() ? 'html' : 'text',
-            'content' => $this->question->getContent(),
-        ]);
+    
+        return array_merge(
+            $this->getPostKeys($this->question),
+            $this->getQuestionKeys($this->question)
+        );
     }
 
-    private function getUser(string $prefix = ''): array
+    private function getPostKeys(PostDto $post): array
     {
-        $options = qa_post_html_options($this->question->getOriginals());
+        return [
+            'author' => [
+                'id' => $post->getAuthor()->getId(),
+                'name' => $post->getAuthor()->getName(),
+                'title' => $post->getAuthor()->getPointsTitle(),
+                'points' => $post->getAuthor()->getPoints(),
+                'level' => $post->getAuthor()->getLevel(),
+                'favourite' => isset($this->favourites['user'][$post->getAuthor()->getId()])
+            ],
+            'change' => $this->getChange($post),
+            'content' => $post->getContent(),
+            'contentType' => $post->hasHtmlContent() ? 'html' : 'text',
+            'createDate' => $post->getCreatedDate(),
+            'id' => $post->getId(),
+            'isHidden' => $post->isHidden(),
+            'userVote' => $post->getUserVote(),
+            'votesCount' => $post->getVotesSum()
+        ];
+    }
+
+    private function getQuestionKeys(QuestionDto $question): array
+    {
+         return [
+            'answers' => $this->getAnswers(),
+            'answersCount' => $question->getAnswersCount(),
+            'category' => [
+                'id' => $question->getCategory()->getId(),
+                'title' => $question->getCategory()->getName(),
+                'path' => $question->getCategory()->getPath(),
+                'favourite' => isset($this->favourites['category'][$question->getOriginal('categorybackpath')])
+            ],
+            'closed' => $question->isClosed(),
+            'favourite' => $question->isFavouriteForLoggedUser(),
+            'hasBestAnswer' => $question->hasBestAnswer(),
+            'slug' => $question->getSlug(),
+            'tags' => $this->getTags($this->question),
+            'title' => $question->getTitle(),
+            'viewsCount' => $question->getViewsNumber()
+        ];
+    }
+
+    private function getAnswerKeys(AnswerDto $answer): array
+    {
+        return [
+            'comments' => $this->getComments($answer),
+            'isBestAnswer' => $answer->getId() === $this->question->getBestAnswerId()
+        ];
+    }
+
+    private function getAnswers(): array
+    {
+        $answers = array_map(function ($answer) {
+            return array_merge(
+                $this->getPostKeys($answer),
+                $this->getAnswerKeys($answer)
+            );
+        }, $this->answers);
+
+        return array_values($answers);
+    }
+
+    private function getComments(AnswerDto $answer): array
+    {
+        $answerComments = array_filter($this->comments, function ($comment) use ($answer) {
+            return $comment->getParentId() === $answer->getId();
+        });
+
+        $comments = array_map(function ($comment) {
+            return $this->getPostKeys($comment);
+        }, $answerComments);
+
+        return array_values($comments);
+    }
+
+    private function getTags(QuestionDto $question): array
+    {
+        return array_map(function ($tag) {
+            return [
+                'name' => $tag,
+                'favourite' => isset($this->favourites['tag'][$tag])
+            ];
+        }, $question->getTags());
+    }
+
+    private function getUser(PostDto $post, $prefix = ''): array
+    {
+        $options = qa_post_html_options($post->getOriginals());
 
         return [
-            'id' => (int)$this->question->getOriginal($prefix . 'userid'),
-            'name' => $this->question->getOriginal($prefix . 'handle'),
-            'title' => qa_get_points_title_html($this->question->getOriginal($prefix . 'points'), $options['pointstitle']),
-            'points' => (int)$this->question->getOriginal($prefix . 'points'),
-            'level' => (int)$this->question->getOriginal($prefix . 'level'),
-            'favourite' => isset($this->favourites['user'][$this->question->getOriginal($prefix . 'userid')])
+            'id' => (int)$post->getOriginal($prefix . 'userid'),
+            'name' => $post->getOriginal($prefix . 'handle'),
+            'title' => qa_get_points_title_html($post->getOriginal($prefix . 'points'), $options['pointstitle']),
+            'points' => (int)$post->getOriginal($prefix . 'points'),
+            'level' => (int)$post->getOriginal($prefix . 'level'),
+            'favourite' => isset($this->favourites['user'][$post->getOriginal($prefix . 'userid')])
         ];
     }
 
-    private function getLatestChangeType(): string
+    private function getChange(PostDto $post): array {
+        return [
+            'type' => $this->getLatestChangeType($post),
+            'user' => $post->hasOriginal('ouserid') && $post->getOriginal('oupdatetype') !== null
+                ? ($post->getOriginal('ouserid') !== null ? $this->getUser($post, 'o') : null)
+                : ($post->getOriginal('userid') !== null ? $this->getUser($post) : null),
+            'date' => date('c', $post->getOriginal('otime') ?? $post->getOriginal('created')),
+            'showItemId' => $post->hasOriginal('opostid') && $post->getOriginal('obasetype') !== 'Q'
+                ? (int)$post->getOriginal('opostid')
+                : null
+        ];
+    }
+
+    private function getLatestChangeType(PostDto $post): string
     {
         $actions = [
             'C_Y' => 'answer_changed_to_comment',
@@ -107,16 +179,18 @@ class QuestionResponse extends JsonResponse implements ResponseBodyFunctionInter
             'Q' => 'question_created',
         ];
 
-        $type = $this->question->getOriginal('obasetype') ?? $this->question->getType();
-        if (!empty($this->question->getOriginal('oupdatetype'))) {
-            $type .= '_' . $this->question->getOriginal('oupdatetype');
+        $type = $post->getOriginal('obasetype') ?? $post->getType();
+
+        if (!empty($post->getOriginal('oupdatetype'))) {
+            $type .= '_' . $post->getOriginal('oupdatetype');
         }
 
-        if ($type === 'Q_C') {
-            return $this->question->isClosed() ? 'question_closed' : 'question_reopened';
+        if ($type === 'Q_C' && $post instanceof QuestionDto) {
+            return $post->isClosed() ? 'question_closed' : 'question_reopened';
         }
+
         if (in_array($type, ['Q_H', 'A_H', 'C_H'])) {
-            $suffix = $this->question->isHidden() ? '_hidden' : '_restored';
+            $suffix = $post->isHidden() ? '_hidden' : '_restored';
             return ($type === 'Q_H' ? 'question' : ($type === 'A_H' ? 'answer' : 'comment')) . $suffix;
         }
 
